Add MobX file and Structure
Signed-off-by: Auccelio <auxerreauccelio@gmail.com>